network/busybox.yml
apiVersion: v1 
kind: Pod 
metadata:
 name: busybox-for-svc
spec: 
 containers:
 - name: busybox 
   image: busybox:1.34.0
   args: 
   - sleep
   - "10000"
