network/service_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-nodeport
  namespace: default
spec:
  selector:
    app: nginx
  ports:
    - port: 443 
      targetPort: 80 
  type: NodePort
