network/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
 name: net-policy
 namespace: default
spec: 
 podSelector:   
  matchLabels:  # All the pods with this label will be a part of this network policy.
   app: nginx 
 policyTypes:
 - Ingress # The incoming traffic to the pods with the above label will be controlled by this network policy.
 - Egress # The outgoing traffic from the pods with the above label will be controlled by this network policy.
 ingress:
 - from:
   - podSelector:
      matchLabels: 
       good: app # Only the pods with this label will be allowed to send traffic to the pods with the label app: nginx
 egres:
  - to:
    - podSelector:
        matchLabels: 
        good: app # Only the pods with this label will be allowed to receive traffic from the pods with the label app: nginx
